2011-12-02  Murray Cumming  <murrayc@murrayc.com>

	DbUtils::recreate_database_from_document(): Create groups too.

	* glom/libglom/db_utils.[h|cc]: recreate_database_from_document():
  Also call add_groups_from_document().

2011-12-02  Murray Cumming  <murrayc@murrayc.com>

	test_document_load: Move changes into test_document_load_and_change.

	* tests/test_document_load.cc:
	* tests/test_document_load_and_change.cc:

2011-12-02  Murray Cumming  <murrayc@murrayc.com>

	test_document_load: Test Document's user groups functions too.

	* tests/test_document_load.cc: Check for expected group names and check 
	that we can remove one.

2011-12-02  Murray Cumming  <murrayc@murrayc.com>

	test_document_load: Test some navigation utility functions.

	* glom/libglom/data_structure/layout/layoutgroup.cc: get_items_recursive():
  Return the child groups as well as their items.
	* tests/test_document_load.cc:
	Test DbUtils::layout_field_should_have_navigation() and 
	LayoutItem_Portal::get_suitable_table_to_view_details().
	
2011-12-02  Murray Cumming  <murrayc@murrayc.com>

	test_selfhosting_new_empty(): Also test DbUtils::get_unused_database_name().

	* glom/libglom/db_utils.cc: get_unused_database_name(): Remove debug output.
	* tests/test_selfhosting_new_empty.cc: Excercise DbUtils::get_unused_database_name(),
	though we do not test it yet when the first choice already exists.

2011-12-02  Murray Cumming  <murrayc@murrayc.com>

	test_selfhosting_new_empty(): Correct and expand.

	* tests/test_selfhosting_new_empty.cc: Fix a CENTRAL->SELF typo. This 
	probably only appeared to work before because no database cluster was really 
	being initialized. Also actually create a database in the database cluster 
	and set its system preferences table's record.

2011-12-01  Murray Cumming  <murrayc@murrayc.com>

	test_selfhosting_new_then_lookup: Minor improvements.

	* tests/test_selfhosting_new_then_lookup.cc: Avoid some hard-coding.
